[package]
name = "version-manager"
version = "0.0.1"
description = "Version Manager"
authors = ["Ulrich-Tonmoy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "window-all",
  "shell-all",
  "http-all",
  "path-all",
  "fs-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52.0"
reqwest = "0.12.7"
tokio = { version = "1.39.3", features = ["full"] }
zip = "2.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
